# GMA

./: .gitignore  Dockerfile.backend  README.md  docker-compose.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 202605060001_create_modeling_tables.py
backend/app/: main.py
backend/app/api/routes/: health.py  modeling_jobs.py  review.py  workflow.py
backend/app/chains/: modeling_chain.py  source_assessment_chain.py
backend/app/core/: config.py  database.py  llm.py
backend/app/graph/: nodes.py  state.py  workflow.py
backend/app/models/: __init__.py  modeling.py
backend/app/repositories/: modeling_job_repository.py
backend/app/schemas/: grs_context.py  modeling.py  modeling_output.py  modeling_run.py  review.py  source_assessment.py  source_bundle.py  supplemental_search.py  validation_result.py  workflow.py
backend/app/services/grs_context/: grs_context_service.py  rule_pack_loader.py
backend/app/services/modeling_job/: modeling_job_service.py
backend/tests/: test_grs_context_service.py  test_health.py  test_modeling_chain.py  test_modeling_chain_schema.py  test_modeling_job_detail_service.py  test_modeling_job_service.py  test_modeling_models.py  test_modeling_node.py  test_modeling_result_validator.py  test_modeling_review_service.py  test_modeling_run_service.py  test_review_routes.py  test_rule_pack_loader.py  test_source_assessment_chain.py  test_source_collection_service.py  test_steam_review_service.py  test_steam_store_service.py  test_supplemental_search_tool.py  test_workflow.py
(+62 files in other folders)
