[project]
name = "gma-backend"
version = "0.1.0"
description = "Backend for GMA, the Game Modeling Agent."
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.4.0",
    "sqlmodel>=0.0.22",
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
